corpus/c/preprocessor_directive/case-01/snapshots/gcc13_14/single_sink_structured/subject_blocks_v1/render.default.txt
error: [syntax] #error macro guard missing @ src/main.c:1:2
raw : #error macro guard missing
| src/main.c:1:2
| #error macro guard missing
|  ^
macro: preserved